  location was not beyond the end of a line.

- Fix possible deadlock when calling VFSManager.waitForRequests() from
  an EditBus message handler for BufferUpdate.CREATED or
  EditPaneUpdate.BUFFER_CHANGED.

- The new PropertyManager in pre10 broke handling of site properties;
  they would be overriden by plugin properties, which is not intended
  behavior.

}}}

}}}

{{{ Version 4.2pre11

This release fixes a show-stopper bug in pre10. The JAR file included in
the installer was not completely up-to-date, and it had a property file
lossage bug.

Note that if you compiled from source, you will not see this problem.

}}}

{{{ Version 4.2pre10

Thanks to Barry Carr, Brad Mace, Ken Turner, Nahuel Foronda,
Ollie Rutherfurd, Trevor Harmon and Thomas Galvin for contributing to
this release.

{{{ Miscellaneous

- Added "Create Constructor" macro, updated "Make Get and Set Methods"
  and "Get Class Name" macros (Thomas Galvin).

- It is now possible to customize the metal look and feel fonts under
  JDK 1.5.

- Page Up/Page Down restored to jEdit 4.1 behavior: when they are
  invoked at the beginning/end of the buffer, the caret is moved to
  the beginning/end, instead of staying at its current position.

- File system browser now uses locale's short date format, not a
  hard-coded DD/MM/YYYY hh:mm (Ollie Rutherfurd).

- Many macros updated, new Keywords_to_Uppercase.bsh,
  Emacs_Next_Line.bsh, Emacs_Previous_Line.bsh, Buffer_Switcher.bsh,
  Delete_Current.bsh, Glob_Close.bsh, Reverse_Lines.bsh,
  Single_Space_Buffer.bsh macros added (Ollie Rutherfurd).

- Documentation updates.

- Status bar clock now uses locale's short time format, instead of a
  hardcoded format.

}}}
{{{ Syntax Highlighting

- Updated Pascal syntax highlighting (Barry Carr).

- Updated ActionScript syntax highlighting (Nahuel Foronda).

- Updated SDL/PR syntax highlighting (Ken Turner).

- Added CVS and Subversion commit info syntax highlighting
  (Ollie Rutherfurd).
